--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -155,7 +155,7 @@
       </li>
      <% end %>
 
-      <% if @items.nil? %>
+      <% if @items.empty? %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
@@ -171,8 +171,8 @@
             </div>
           </div>
         </div>
-        <% end %>
       </li>
+      <% end %>
       <% end %>
     </ul>
   </div>
