--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,14 +129,13 @@
     <ul class='item-lists'>
      <% @items.each do |item| %>
     <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" if item.image.attached? %>
-
           <%# 商品が売れていればsold outを表示しましょう %>
-          <div class='sold-out'>
+          <!--<div class='sold-out'>
             <span>Sold Out!!</span>
-          </div>
+          </div>-->
           <%# //商品が売れていればsold outを表示しましょう %>
         </div>
         <div class='item-info'>
