--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -4,6 +4,7 @@
 <div class="items-sell-contents">
   <header class="items-sell-header">
     <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
+    <script src="item_price.js"></script>
   </header>
   <div class="items-sell-main">
     <h2 class="items-sell-title">商品の情報を入力</h2>
