--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,33 +7,36 @@
       <%= @item.item %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image ,class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <!--<div class="sold-out">
-        <span>Sold Out!!</span>
-      </div>-->
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <%= image_tag @item.image, class: "item-box-img" %>
+      <% if @item.order.present? %>
+        <div class="sold-out">
+          <span>Sold Out!!</span>
+        </div>
+      <% end %>
+      </div>
+      <div class="item-price-box">
+        <span class="item-price">
+          <%= @item.price %>円
+        </span>
+        <span class="item-postage">
+          <%= DeliveryCost.find(@item.delivery_cost_id).name %>
+        </span>
+      </div>
+      <% if @item.order == nil %>
+      <% if user_signed_in? && current_user.id == @item.user_id %>
+        <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
+      <% end %>
+      <% if user_signed_in? && current_user.id != @item.user_id %>
+        <%= link_to "購入画面に進む", item_orders_path(@item), class: "item-red-btn" %>
+      <% end %>
+      <% end %>
     </div>
-    <div class="item-price-box">
-      <span class="item-price">
-       <%= @item.price %>円
-      </span>
-      <span class="item-postage">
-        <%= DeliveryCost.find(@item.delivery_cost_id).name %>
-      </span>
-    </div>
-<% if user_signed_in? && current_user.id == @item.user_id %>
-    <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
-    <p class="or-text">or</p>
-    <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class:"item-destroy" %>
-<% end %>
-<% if user_signed_in? && current_user.id != @item.user_id %>
-    <%= link_to "購入画面に進む", item_orders_path(@item), class:"item-red-btn"%>
-<% end %>
 
     <div class="item-explain-box">
-      <span><%= @item.content %></span>
-    </div>
+    <span><%= @item.content %></span>
+
     <table class="detail-table">
       <tbody>
         <tr>
@@ -64,11 +67,11 @@
     </table>
     <div class="option">
       <div class="favorite-btn">
-        <%= image_tag "star.png" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
+        <%= image_tag "star.png", class: "favorite-star-icon", width: "20", height: "20" %>
         <span>お気に入り 0</span>
       </div>
       <div class="report-btn">
-        <%= image_tag "flag.png" ,class:"report-flag-icon" ,width:"20",height:"20"%>
+        <%= image_tag "flag.png", class: "report-flag-icon", width: "20", height: "20" %>
         <span>不適切な商品の通報</span>
       </div>
     </div>
@@ -84,8 +87,8 @@
         不快な言葉遣いなどは利用制限や退会処分となることがあります。
       </p>
       <button type="submit" class="comment-btn">
-        <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
-        <span>コメントする<span>
+        <%= image_tag "comment.png", class: "comment-flag-icon", width: "20", height: "25" %>
+        <span>コメントする</span>
       </button>
     </form>
   </div>
@@ -98,6 +101,7 @@
     </a>
   </div>
   <a href="#" class="another-item"><%= Category.find(@item.category_id).name %>をもっと見る</a>
+</div>
 </div>
 
 <%= render "shared/footer" %>
