--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -22,13 +22,12 @@
         </span>
 
 
-      <% if @item.order == nil %>
-      <% if user_signed_in? && current_user.id == @item.user_id %>
+      <% if user_signed_in? && @item.order == nil %>
+      <% if  current_user.id == @item.user_id %>
         <%= link_to "商品の編集", edit_item_path(@item), method: :get, class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path(@item), data: { turbo_method: :delete }, class: "item-destroy" %>
-      <% end %>
-      <% if user_signed_in? && current_user.id != @item.user_id %>
+      <% else %>
         <%= link_to "購入画面に進む", item_orders_path(@item), class: "item-red-btn" %>
       <% end %>
       <% end %>
